<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.imdabigboss.easydatapack</groupId>
  <artifactId>backend</artifactId>
  <version>1.1</version>
  <packaging>jar</packaging>

  <name>EasyDatapack-Backend</name>

  <parent>
    <groupId>com.github.imdabigboss</groupId>
    <artifactId>easydatapack</artifactId>
    <version>1.1</version>
  </parent>

  <properties>
    <maven.compiler.source>16</maven.compiler.source>
    <maven.compiler.target>16</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>dmulloy2-repo</id>
      <url>https://repo.dmulloy2.net/repository/public/</url>
    </repository>
    <repository>
      <id>opencollab-snapshot-repo</id>
      <url>https://repo.opencollab.dev/main/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.github.imdabigboss.easydatapack</groupId>
      <artifactId>api</artifactId>
      <version>1.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.geysermc.geyser</groupId>
      <artifactId>api</artifactId>
      <version>2.1.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.comphenix.protocol</groupId>
      <artifactId>ProtocolLib</artifactId>
      <version>4.7.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>EasyDatapack</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
